# kampus

./: Cargo.toml  LICENSE.md  README.md
data/: people.csv  themes
src/: derangement.rs  main.rs
templates/: en.hbs  fr.hbs
