[package]
name = "krampus"
version = "0.1.0"
authors = ["Alexandre St-Louis Fortier <astlouisf@gmail.com>"]

[dependencies]
csv = "1.0.0-beta.5"
docopt = "0.8"
handlebars = "0.29.1"
lettre = "0.7"
rand = "0.3"
serde = "1.0" # if you're using `derive(Deserialize)`
serde_derive = "1.0" # if you're using `derive(Deserialize)`
